<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <include
        layout="@layout/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:onClick="go_back_home"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="20dp"

        android:layout_marginTop="70dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        tools:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_add_contact"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/input_name"
            android:text="@string/name"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/name_placeholder"
            android:inputType="text"
            android:paddingVertical="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/name_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/surname"
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/birthdate"/>

        <EditText
            android:id="@+id/etAge"
            android:textColor="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/birth_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill" />

        <EditText
            android:id="@+id/etDomaine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skill_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"/>

        <EditText
            android:id="@+id/etTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_placeholder" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/go_back_home_btn"
                android:onClick="go_back_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_home"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/grey"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/btn_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_validate"
                android:backgroundTint="@color/denim"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="5dp"/>


        </LinearLayout>



        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

