<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include layout="@layout/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmed"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_content">
            <TextView
                android:id="@+id/recap_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/recap_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/recap_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/birthdate"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/recap_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skill"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRetour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/light_grey"
                android:textColor="@color/grey"
                android:text="@string/dialog_negative"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:padding="20dp"/>
            <Button
                android:padding="20dp"
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/denim"
                android:text="@string/dialog_positive"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="16sp"/>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
