<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <include
        layout="@layout/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="-80dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <!-- Titre du voyage -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_sncf_info"
            android:background="@drawable/rounded_content"
            android:textColor="@color/black"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/departureInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_content"
                android:hint="@string/title_add_contact"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arrivalInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_content"
                android:hint="@string/title_add_contact"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/denim"
            android:textColor="@color/white"
            android:text="@string/btn_search"
            android:paddingHorizontal="60dp"
            android:textSize="18sp"
            android:paddingVertical="10dp"
            app:cornerRadius="5dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            android:isScrollContainer="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/schedulesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_content" />
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/go_back_home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/grey"
                android:onClick="go_back_home"
                android:text="@string/btn_home" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
